# ws-3-crew-ai-multi-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/agents/: codebase-explorer.md  crewai-architect.md  crewai-developer.md  dagster-architect.md  dagster-developer.md  dbt-architect.md  dbt-developer.md  duckdb-architect.md  duckdb-developer.md  mcp-architect.md  mcp-developer.md
.claude/kb/: _index.yaml
.claude/kb/crewai/: quick-reference.md
.claude/kb/crewai/concepts/: crew-agent-task-model.md  (+2 more)
.claude/kb/dagster/: quick-reference.md
.claude/kb/dbt/: quick-reference.md
.claude/kb/duckdb/: quick-reference.md
.claude/kb/mcp/: quick-reference.md
.claude/rules/: agent-operating-rules.md
.claude/workflows/: build-sentinel-engine.js
.kimi/: .session
.kimi/state/: warnings.jsonl
docs/: README.md
docs/adrs/: 0001-analytical-backbone.md  0002-sentinel-engine.md  README.md
platform/: README.md  __init__.py
platform/evals/: README.md  __init__.py  _common.sh  eval_ac1.sh  eval_ac2.sh  eval_ac3.sh  eval_defect_survival.sh  run_evals.sh
platform/harness/: README.md  __init__.py  cli.py  config.py  loadgen.py  monitor.py  pg_session.py  runner.py  verdict.py
platform/ingestion/: __init__.py  assets.py  dbt_assets.py  definitions.py  jobs.py  resources.py  run.py  schedules.py  sensors.py
platform/intelligence/: README.md  __init__.py  app.py  gold_catalog.py  query_engine.py  server.py  sql_guard.py  tools.py
platform/probe/: README.md  __init__.py  cli.py  freshness.py  verdict.py
platform/transform/: README.md  __init__.py  dbt_project.yml
platform/transform/macros/: build_rejects.sql  classify.sql  enums.sql  generate_schema_name.sql  incremental_quarantine.sql
platform/transform/profiles/: .user.yml  profiles.yml
platform/warehouse/: README.md  __init__.py  connection.py  paths.py
presentation/: README.md  cvg-aut-systems-spine-deck.html  w3-multi-agent.html
prompts/: README.md
sentinel/: README.md  __init__.py  crew.py  flow.py  guardrails.py  models.py  scoring.py  trigger.py
sentinel/config/: agents.yaml  tasks.yaml
sentinel/knowledge/: runbook.md
sentinel/tools/: __init__.py  logs.py  rag.py  resolution.py  warehouse.py
sketch/: README.md  analytical-backbone.md  sentinel-engine.md
src/: README.md
src/db/: 01_schema.sql  connection.py
src/seed/: factories.py  seed.py
src/sentinel/: __init__.py  crew.py  scoring.py
src/sentinel/config/: agents.yaml  tasks.yaml
tests/: README.md  __init__.py  test_c2_ingestion.py  test_c5_intelligence.py  test_c8_probe.py  test_e2e_backbone.py  test_e2e_incremental_medallion.py
tests/harness/: __init__.py  test_lockwait_detection.py  test_verdict.py
tests/sentinel/: __init__.py  stub_llm.py  test_crew_build.py  test_crew_stub.py  test_e2e_diagnose.py  test_eval_live.py  test_flow.py  test_rag.py  test_rubric.py  test_scoring.py  test_tools.py  test_trigger.py
(+58 files in other folders)
