[project]
name = "ecommerce-analytics"
version = "0.1.0"
description = "E-commerce analytics workshop"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.0.0",
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
