[project]
name = "ecommerce-analytics"
version = "0.1.0"
description = "E-commerce analytics workshop"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.0.0",
    "psycopg[binary]>=3.2.0",
    # Component A platform stack (C2 ingest -> C3 dbt -> C4 DuckDB -> C5 MCP)
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dbt-duckdb>=1.9",
    "duckdb>=1.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.12",
    "pydantic>=2.7",
    # Component B: Sentinel CrewAI crew
    "crewai==0.100.0",
    "crewai-tools==0.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8",
    "httpx>=0.27",
    "anyio>=4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
