[project]
name = "ecommerce-analytics"
version = "0.1.0"
description = "E-commerce analytics workshop"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.0.0",
    "psycopg[binary]>=3.2.0",
    # Component A platform stack (C2 ingest -> C3 dbt -> C4 DuckDB -> C5 MCP)
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    # dagster-dbt uses the 0.x library scheme: 0.29.x tracks dagster core 1.13.x.
    # Pinned to the matching minor so the @dbt_assets / DagsterDbtTranslator API
    # stays compatible with the installed dagster 1.13.10 line.
    "dagster-dbt>=0.29,<0.30",
    "dbt-duckdb>=1.9",
    "duckdb>=1.1",
    # PyArrow backs C2's bulk raw upsert: stamped rows are assembled into an
    # in-memory Arrow table, registered as a virtual relation, and written with a
    # single vectorized INSERT...SELECT...ON CONFLICT. The DuckDB docs explicitly
    # warn against executemany for bulk loads; Arrow is the endorsed companion.
    # Already present transitively (duckdb/dbt) — pinned here so the import is a
    # declared contract, not an accident.
    "pyarrow>=14",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.12",
    "pydantic>=2.7",
    # Component B: Sentinel CrewAI crew
    "crewai==0.100.0",
    "crewai-tools==0.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8",
    "httpx>=0.27",
    "anyio>=4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
